Update v1/handlers.go
